- correction for folderid when "create scheduled job" -- using incorrectly as team drive id whereas it should default to root 
- implement: STRM creation - tv shows & catalog - preserve show title #72
- fix: add fallback to original if there are no transcode links
- fix: original taking precedence over override #68
v0.1.25 (2018-06-12)
- add STRM creation parameter - skip partial files
- fix for STRM logging
- add pquality=3 = original
- fix: Windows - \ is being replaced by %5C in settings #62
- fixing: Failed to pull down .nfo and .srt #61
- reset running scheduled jobs on load
- fixing missing parameters on scheduled task
- implement: Add an option to reset the runtime status of scheduled jobs #59
v0.1.24 (2018-05-20)
- substitue title name for folder name: Allow the user create scheduled tasks for a particular folder #58
v0.1.23 (2018-05-19)
- add a parameter to STRM creation routine for: Download SRT and NFO when available. #46
- remove NFO and SRT from saving to cloud spreadsheet and STRM log
- implement: Download SRT and NFO when available. #46
- add subtitles and nfo files to media collection objects and assign these MEDIA_VIDEO_HELPER file type
- improvement: for downloadGeneralFile, move up the file check before the web call
- fix: strm creation not inserting 'http://' at the start #57
v0.1.22 (2018-05-18)
- implemented: Scheduling STRM support non-catalog structures #45
- testing: Scheduling STRM support non-catalog structures #45
- remove logging for favicon
- improvements for STRM creation - remove blank lines from log
- improvements for STRM creation - better logic around movie dates
- fix for catalogging disabling for STRM creation
- improvements for STRM creation - adding stripping for title/show name
- fix for missing STRM fields
- make "create Google Transcode" STRM files default to false
v0.1.20 (2018-05-12)
- fix: Can't get passthrough to work #55